# rust_to_bf

./: .gitignore  Cargo.toml  README.md  build.rs
example_programs/: arithmetic.rs  arithmetic.stdout  array_copy.rs  array_copy.stdout  array_expr.rs  array_expr.stdout  array_index.rs  array_index.stdout  array_index_struct.rs  array_index_struct.stdout  bf_interpreter.rs  bf_interpreter.stdin  bf_interpreter.stdout  break_abc.rs  break_var_access.rs  collatz.rs  collatz.stdout  comments.rs  day_of_week.rs  day_of_week.stdout  deref_mut.rs  deref_mut.stdout  equality.rs  equality.stdout  io_echo4.rs  io_echo4.stdout  linked_list.rs  linked_list.stdout  malloc.rs  malloc_structs.rs  malloc_structs.stdout  manhattan.rs  manhattan.stdout  prime_checker.rs  prime_checker.stdout  prime_printer.rs  prime_printer.stdout  print.rs  print.stdout  recursive_fibonacci.rs  (+29 more)
src/: ast.rs  bf.rs  cli.rs  common.rs  compiler.rs  ir.rs  lexer.rs  macros.rs  main.rs  parser.rs  std.bs
src/backend/: Cargo.toml  bf.rs  codegen.rs  mod.rs
src/backend/src/: bf.rs  codegen.rs  lib.rs
src/frontend/: Cargo.toml  ast.rs  lexer.rs  mod.rs  parser.rs
src/frontend/src/: ast.rs  lexer.rs  parser.rs
src/middle/: Cargo.toml  lowering.rs  mod.rs  std.rs
src/middle/src/: ir.rs  lib.rs  lowering.rs  std.rs
tests/: examples.rs
