[package]
name = "rust_to_bf"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
backend = { workspace = true }
clap = { version = "4.5.19", features = ["derive"] }
frontend = { workspace = true }
middle = { workspace = true }

[dev-dependencies]
rstest = "0.23.0"
rstest_reuse = "0.7.0"

[workspace]
members = [
    "src/backend",
    "src/frontend",
    "src/middle",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.89"
backend = { path = "src/backend" }
derive_more = { version = "1.0.0", features = ["display", "from"] }
frontend = { path = "src/frontend" }
middle = { path = "src/middle" }
